--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ baseurl: ""
 permalink: /:year/:month/:day/:title/
 google_analytics: 
 
-name: eunji
-title: Portfolio
+name: Thomas Vaeth
+title: The Barber Theme
 description: >
-  Barber is a blog theme for Jekyll built by eunji for Samesies using HTML, Sass, and JavaScript.
-url: https://eungggggg.github.io
+  Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
+url: http://barber.samesies.io
 twitter_username: thomasvaeth
 default_img: /assets/images/seo.jpg
 social:
@@ -36,9 +36,9 @@ mailchimp_input: b_66ddf555dab480e6a8606430b_89b3ee034f
 
 # Author settings
 author:
-  - name: eunji
-    bio: eunji was born in New York, raised in Pennsylvania, and transplanted in Washington. He was a Web Developer at Urban Influence, but now he's a Software Engineer at Getty Images.
-    url: https://eungggggg.github.io
+  - name: Thomas Vaeth
+    bio: Thomas Vaeth was born in New York, raised in Pennsylvania, and transplanted in Washington. He was a Web Developer at Urban Influence, but now he's a Software Engineer at Getty Images.
+    url: http://thomasvaeth.com
 
 # Pagination settings
 pagination:
@@ -59,7 +59,7 @@ autopages:
   tags:
     layouts: 
       - 'tag.html'
-    title: 'Portfolio'
+    title: 'The Barber Theme'
     permalink: '/tag/:tag'
     slugify:
       mode: raw
