커스텀 테스트

--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 # Site/SEO settings
-email: okay@samesies.io
+email: eungggggg@gmail.com
 baseurl: ""
 permalink: /:year/:month/:day/:title/
 google_analytics: 
 
-name: Thomas Vaeth
-title: The Barber Theme
+name: Eunji Jeong
+title: Portfolio
 description: >
-  Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
-url: http://barber.samesies.io
-twitter_username: thomasvaeth
+  Eunji Jeong - a Product Designer's Portfolio
+url: https://eungggggg.github.io
+twitter_username: eungggggg
 default_img: /assets/images/seo.jpg
 social:
-  - name: twitter
-    url: https://twitter.com/thomasvaeth
+  # - name: twitter
+  #   url: https://twitter.com/eungggggg
   - name: instagram
-    url: https://www.instagram.com/thomas.vaeth/
+    url: https://www.instagram.com/eungggggg/
   - name: linkedin
-    url: https://www.linkedin.com/in/thomasvaeth/
+    url: https://www.linkedin.com/in/eungggggg/
   - name: github
-    url: https://github.com/samesies
-  - name: codepen
-    url: https://codepen.io/thomasvaeth/
+    url: https://github.com/eungggggg
+  # - name: codepen
+  #   url: https://codepen.io/eungggggg/
 
 # Contact settings
 contact_img: /assets/images/placeholder-28.jpg
@@ -36,9 +36,9 @@ mailchimp_input: b_66ddf555dab480e6a8606430b_89b3ee034f
 
 # Author settings
 author:
-  - name: Thomas Vaeth
-    bio: Thomas Vaeth was born in New York, raised in Pennsylvania, and transplanted in Washington. He was a Web Developer at Urban Influence, but now he's a Software Engineer at Getty Images.
-    url: http://thomasvaeth.com
+  - name: Eunji Jeong
+    # bio: Thomas Vaeth was born in New York, raised in Pennsylvania, and transplanted in Washington. He was a Web Developer at Urban Influence, but now he's a Software Engineer at Getty Images.
+    # url: http://thomasvaeth.com
 
 # Pagination settings
 pagination:
